Fix CSS of source code : first line is too big when displaying SCM info

--- a/sonar-server/src/main/webapp/stylesheets/style.css
+++ b/sonar-server/src/main/webapp/stylesheets/style.css
@@ -645,7 +645,7 @@ ul.operations li a {
 .sources2 td.revision {
   border-top: 1px solid #DDD;
   vertical-align: top;
-  padding: 2px 0.3em;
+  padding: 0 0.3em;
   white-space: nowrap;
 }
 .sources2 span.date, .sources2 span.date a {
